Samsung multi window support
Refs #816

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_list">0dp</dimen>
 
+    <!-- Samsung multi window support -->
+    <dimen name="app_defaultsize_w">640dip</dimen>
+    <dimen name="app_defaultsize_h">400dip</dimen>
+    <dimen name="app_minimumsize_w">400dip</dimen>
+    <dimen name="app_minimumsize_h">200dip</dimen>
+
 </resources>
