--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -71,7 +71,7 @@
             android:layout_marginLeft="3dp"
             android:layout_marginRight="6dp"
             android:background="?attr/drawable_checkbox_bg"
-            android:contentDescription="@string/menu_all"
+            android:contentDescription="@string/title_restrict"
             android:duplicateParentState="true" />
 
         <TextView
