--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -64,15 +64,24 @@
                 android:text="@string/settings_expert" />
 
             <CheckBox
+                android:id="@+id/cbDangerous"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:text="@string/settings_dangerous" />
+
+            <CheckBox
                 android:id="@+id/cbUsage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:text="@string/settings_usage" />
 
             <CheckBox
                 android:id="@+id/cbExtra"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:text="@string/settings_extra" />
 
             <TextView
