(Hopefully) themeable tab highlights

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -29,8 +29,8 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="38sp"
-            android:background="?attr/drawable_divider"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:layout_marginBottom="-5dp" >
 
             <TextView
                 android:id="@+id/tvCategoryDetail"
@@ -57,6 +57,33 @@
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="5dp"
+            android:orientation="horizontal" >
+
+            <View
+                android:id="@+id/vCategoryHighlight"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent" />
+
+            <TextView
+                android:id="@+id/vFilterHighlight"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_filter_border" />
 
         <!-- Categories -->
 
