--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -37,7 +37,7 @@
     <!-- Thick divider -->
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@android:color/darker_gray" />
 
@@ -116,7 +116,7 @@
     <!-- Thin divider -->
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray" />
 
