--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -63,7 +63,7 @@
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
