--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -28,8 +28,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="38sp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="-5dp" >
+            android:layout_marginBottom="-5dp"
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/tvCategoryDetail"
@@ -356,7 +356,6 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin_list"
         android:layout_marginTop="6dip"
         android:choiceMode="multipleChoice"
-        android:fastScrollEnabled="true"
         android:paddingRight="12dip"
         android:scrollbarStyle="insideInset" />
 
