--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -18,5 +18,8 @@
     <attr name="drawable_background" format="reference" />
     <attr name="drawable_card" format="reference" />
     <attr name="color_dangerous" format="reference" />
+    <attr name="color_state_attention" format="reference" />
+    <attr name="color_state_restricted" format="reference" />
+    <attr name="color_state_shared" format="reference" />
 
 </resources>
